# oxiui

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.ffi-audit  README.md  TODO.md  deny.toml
crates/oxiui/: Cargo.toml  README.md  TODO.md
crates/oxiui-accessibility/: Cargo.toml  README.md  TODO.md
crates/oxiui-accessibility/src/: action.rs  builder.rs  dirty.rs  focus.rs  lib.rs  nav.rs  pool.rs  props.rs  text_a11y.rs  text_bridge.rs  tree.rs  widget_bridge.rs
crates/oxiui-accessibility/tests/: focus_and_text_tests.rs  tree.rs
crates/oxiui-compute-wgpu/: CONTRIBUTING.md  Cargo.toml  README.md  TODO.md
crates/oxiui-compute-wgpu/benches/: pipeline_cache.rs  readback.rs
crates/oxiui-compute-wgpu/examples/: matrix_mul.rs  prefix_sum.rs
crates/oxiui-compute-wgpu/src/: buffer.rs  context.rs  dispatch.rs  error.rs  hot_reload.rs  integration.rs  lib.rs  pipeline.rs  wgsl.rs
crates/oxiui-compute-wgpu/src/integration/: render_soft.rs  render_wgpu.rs  text.rs
crates/oxiui-core/: Cargo.toml  README.md  TODO.md
crates/oxiui-core/benches/: event_dispatch.rs  flexbox_layout.rs  layout_cache.rs
crates/oxiui-core/src/: anim.rs  cache.rs  color_space.rs  diff.rs  dispatch.rs  events.rs  focus.rs  geometry.rs  grid.rs  layout.rs  lib.rs  paint.rs  reactive.rs  response.rs  scheduler.rs  solver.rs  style.rs  text_style.rs  tree.rs  widget_ext.rs  window.rs
crates/oxiui-core/tests/: core_tests.rs  text_style_tests.rs
crates/oxiui-dioxus/: Cargo.toml  README.md
crates/oxiui-dioxus/src/: ctx.rs  lib.rs
crates/oxiui-dioxus/tests/: build.rs
crates/oxiui-egui/: Cargo.toml  README.md  TODO.md
crates/oxiui-egui/src/: lib.rs
crates/oxiui-egui/tests/: a11y_integration_tests.rs  design_tokens_tests.rs  egui_tests.rs  extended_tests.rs  perf_tests.rs  slice_g_tests.rs  slice_h_tests.rs  slice_r5_tests.rs  snapshot_tests.rs  styled_text_tests.rs  table_integration_tests.rs  widgets.rs
crates/oxiui-hot-reload-notify/: Cargo.toml
crates/oxiui-hot-reload-notify/src/: lib.rs
crates/oxiui-iced/: Cargo.toml  README.md  TODO.md
crates/oxiui-iced/src/: a11y_bridge.rs  adapter.rs  lib.rs  theme.rs
crates/oxiui-iced/tests/: a11y_bridge_tests.rs  adapter.rs  fingerprint_tests.rs  polish.rs  slice_i_tests.rs  slice_s8_tests.rs  theme.rs  widgets.rs
crates/oxiui-render-soft/: Cargo.toml  README.md  TODO.md
crates/oxiui-render-soft/benches/: rects.rs
crates/oxiui-render-soft/src/: backend.rs  backend_switch.rs  blend.rs  canvas_upload.rs  clip.rs  dither.rs  draw.rs  fft_blur.rs  framebuffer.rs  gradient.rs  headless.rs  lib.rs  path.rs  scanline.rs  shadow.rs  simd_fill.rs  tile.rs
crates/oxiui-render-soft/tests/: backend_tests.rs  dirty_tests.rs  snapshot_tests.rs  soft_tests.rs  theme_integration_tests.rs
crates/oxiui-render-wgpu/: Cargo.toml  README.md  TODO.md
crates/oxiui-render-wgpu/benches/: rrect_bench.rs
crates/oxiui-render-wgpu/src/: a11y_bridge.rs  atlas.rs  batch.rs  clip.rs  error.rs  gpu.rs  lib.rs  quality.rs  resource.rs  sdf_text.rs  surface.rs  text_bridge.rs  theme_bridge.rs
crates/oxiui-render-wgpu/src/gpu/: blend.rs  buffer.rs  compute_blur.rs  device.rs  earcut.rs  exec.rs  frame_pacing.rs  geometry.rs  hdr.rs  instance.rs  layer_cache.rs  pipeline.rs  render_target.rs  renderer.rs  ring_buffer.rs  shadow.rs  stencil.rs  tessellator.rs  texture.rs
crates/oxiui-render-wgpu/src/shaders/: blur.wgsl  blur_compute.wgsl  composite.wgsl  gradient.wgsl  instanced.wgsl  solid.wgsl  textured.wgsl
crates/oxiui-render-wgpu/tests/: golden_image_tests.rs  headless_render_tests.rs  wgpu_tests.rs
crates/oxiui-slint/: Cargo.toml  README.md
crates/oxiui-slint/examples/: hello_slint.rs
crates/oxiui-slint/src/: ctx.rs  lib.rs
crates/oxiui-slint/tests/: build.rs
crates/oxiui-table/: Cargo.toml  README.md  TODO.md
crates/oxiui-table/src/: accessibility.rs  align.rs  async_source.rs  clipboard.rs  csv.rs  egui_table.rs  filter.rs  format.rs  header.rs  height.rs  height_cache.rs  iced_table.rs  lib.rs  nav.rs  pagination.rs  persistence.rs  selection.rs  sort.rs  table.rs  text_integration.rs  theme_integration.rs
crates/oxiui-table/tests/: height_cache_tests.rs  sticky_tests.rs  table.rs
crates/oxiui-text/: Cargo.toml  README.md  TODO.md
crates/oxiui-text/src/: atlas.rs  cache.rs  decoration.rs  editor.rs  emoji.rs  fallback.rs  highlight.rs  hyperlink.rs  ime.rs  input.rs  label.rs  layout.rs  lib.rs  rich.rs  selection.rs  truncation.rs
crates/oxiui-text/tests/: text_tests.rs
crates/oxiui-theme/: Cargo.toml  README.md  TODO.md
crates/oxiui-theme/src/: anim_tokens.rs  breakpoint.rs  builder.rs  color.rs  compile.rs  gallery.rs  high_contrast.rs  icons.rs  inheritance.rs  lazy_palette.rs  lib.rs  manager.rs  overlay.rs  palette_ext.rs  serial.rs  spec.rs  style_cache.rs  stylesheet.rs  tokens.rs  typography.rs
crates/oxiui-theme/tests/: shadow_spec_tests.rs  stylesheet_tests.rs  theme_tests.rs
crates/oxiui-tray/: Cargo.toml
crates/oxiui-tray/src/: lib.rs
crates/oxiui-web/: Cargo.toml  README.md  TODO.md
crates/oxiui-web/src/: clipboard.rs  css.rs  drag_drop.rs  error_handling.rs  events.rs  font_loading.rs  fullscreen.rs  ime.rs  lib.rs  performance.rs  responsive.rs  service_worker.rs  wasm.rs
crates/oxiui-web/tests/: api_tests.rs
crates/oxiui/examples/: hello.rs  hello_dioxus.rs  hello_iced.rs  hello_slint.rs  hello_table.rs
crates/oxiui/src/: app_config.rs  command.rs  dialog.rs  egui_backend.rs  iced_backend.rs  icon.rs  lib.rs  logging.rs  menu.rs  multiwindow.rs  native_dialog.rs  notification.rs  recording.rs  runner.rs  theme_picker.rs  tray.rs
crates/oxiui/tests/: app_tests.rs  example_compilation.rs  facade_tests.rs  feature_gates.rs  lib_tests.rs  recording_tests.rs
scripts/: ffi-audit.sh
