[package]
name = "oxiui-compute-wgpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust wgpu GPU-compute abstraction for the COOLJAPAN ecosystem"
keywords = ["wgpu", "gpu", "compute", "cooljapan", "pure-rust"]
categories = ["rendering::engine", "science"]
publish = true

[features]
default = []
## Enable span-based profiling via `tracing`.
##
## When active, `ComputeContext::new`, `read_back`, and
## `compute_pipeline` are annotated with `#[tracing::instrument]`.
tracing = ["dep:tracing", "tracing/attributes"]

[dependencies]
wgpu     = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
tracing  = { workspace = true, optional = true }

[dev-dependencies]
oxiui-core = { path = "../oxiui-core" }
criterion  = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "readback"
harness = false

[[bench]]
name = "pipeline_cache"
harness = false
