[package]
name = "oxiui-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OxiUI wasm32 entry point — mounts an OxiUI app on an HTML canvas"
categories = ["gui", "wasm"]
keywords = ["gui", "wasm", "cooljapan", "oxiui", "wasm-bindgen"]
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
web = []

# wasm-bindgen, web-sys, eframe WebRunner and serde_json are only needed on the
# wasm32 target.  They MUST NOT appear in [dependencies] — only here, so that
# native builds (including --all-features) never attempt to compile them.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen         = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys              = { workspace = true }
eframe               = { workspace = true }
egui                 = { workspace = true }
serde_json           = { workspace = true }

[dependencies]
oxiui-core = { workspace = true, features = ["serde"] }
oxiui-egui = { workspace = true }
